solve: problem resolved about num list with css:overflow auto

--- a/모멘텀/App/index.css
+++ b/모멘텀/App/index.css
@@ -4,7 +4,9 @@ body {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1% 30% 29% 40%;
   flex-wrap: wrap;
-  max-width: 100vw;
+  font-size: 15px;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   justify-content: center;
@@ -25,10 +27,10 @@ body {
 /* Gereral (버튼, 인풋) */
 button {
   justify-content: flex-end;
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  margin: 8px;
+  width: 2em;
+  height: 3em;
+  padding: 1em;
+  margin: 0.8em;
   border-radius: 5px;
   background-color: transparent;
   border: 1px solid white;
@@ -96,6 +98,8 @@ input:focus {
 /* Main Clock */
 .clock {
   grid-area: 2 / 2 / 3 / 3;
+  display: flex;
+  flex-direction: column;
   background: linear-gradient(
     121.57deg,
     #ffffff 18.77%,
@@ -107,6 +111,7 @@ input:focus {
   font-weight: bold;
   max-height: 6em;
   justify-self: center;
+  align-self: flex-start;
 }
 
 /* Greeting & Todo 전체 Grid */
@@ -114,7 +119,7 @@ input:focus {
   grid-area: 3 / 2 / 4 / 3;
   position: relative;
   justify-self: center;
-  margin-top: 3rem;
+  margin-top: 2rem;
 }
 
 /* Input들을 담아야 함 */
@@ -153,6 +158,7 @@ input:focus {
 
 /* Encapsulate하는 Card */
 .pending-finished__card {
+  overflow: auto;
   display: flex;
   justify-self: center;
   justify-content: center;
@@ -160,6 +166,21 @@ input:focus {
   min-width: 20vw;
   min-height: 20vh;
   max-height: 35vh;
+}
+
+.pending-finished__card::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+.pending-finished__card::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 165, 2, 0.4);
+  border: 2px solid rgb(255, 165, 2);
+  border-radius: 5px;
+}
+.pending-finished__card::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
 }
 
 @media (max-width: 900px) {
@@ -228,7 +249,8 @@ input:focus {
   flex-direction: column;
   justify-self: flex-end;
   grid-gap: 10px;
-  color: rgb(107, 104, 99);
+  color: rgba(0, 0, 0, 0.75);
+  /* color: rgb(107, 104, 99); */
   font-size: 20px;
   font-weight: 600;
   text-align: right;
